--- a/index.html
+++ b/index.html
@@ -3,47 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kalkulator Investasi GISBEI UPI</title>
+  <title>Web Investasi</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-    }
-    .card {
-      transition: all 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      background-color: #eff6ff;
-    }
-  </style>
 </head>
-<body class="bg-gradient-to-br from-white via-gray-100 to-gray-200 min-h-screen p-8">
-  <div class="max-w-5xl mx-auto">
-    <header class="text-center mb-12">
-      <h1 class="text-4xl font-bold text-blue-600 mb-2">Dashboard Investasi GISBEI UPI</h1>
-      <p class="text-gray-600 text-lg">Analisis Keuangan Saham Secara Mudah dan Cepat</p>
-    </header>
+<body class="bg-gray-100 p-6 relative min-h-screen">
+  <div class="max-w-3xl mx-auto pb-16">
+    <h1 class="text-3xl font-bold mb-6 text-center">Dashboard Investasi</h1>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mb-12">
-      <a href="#" onclick="showSection('fundamental')" class="card bg-white rounded-2xl shadow-md p-6 text-center hover:shadow-xl">
-        <h3 class="text-lg font-semibold text-blue-700">Hitung Fundamental</h3>
-      </a>
-      <a href="#" onclick="showSection('dividen')" class="card bg-white rounded-2xl shadow-md p-6 text-center hover:shadow-xl">
-        <h3 class="text-lg font-semibold text-blue-700">Analisis Dividen</h3>
-      </a>
-      <a href="#" onclick="showSection('valuasi')" class="card bg-white rounded-2xl shadow-md p-6 text-center hover:shadow-xl">
-        <h3 class="text-lg font-semibold text-blue-700">Valuasi Saham</h3>
-      </a>
-      <a href="#" onclick="showSection('piotroski')" class="card bg-white rounded-2xl shadow-md p-6 text-center hover:shadow-xl">
-        <h3 class="text-lg font-semibold text-blue-700">Skor Piotroski</h3>
-      </a>
-      <a href="#" onclick="showSection('sektor')" class="card bg-white rounded-2xl shadow-md p-6 text-center hover:shadow-xl">
-        <h3 class="text-lg font-semibold text-blue-700">Perbandingan Sektor</h3>
-      </a>
+<div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
+      <a href="#" onclick="showSection('fundamental')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Hitung Fundamental</a>
+      <a href="#" onclick="showSection('dividen')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Analisis Dividen</a>
+      <a href="#" onclick="showSection('valuasi')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Valuasi Saham</a>
+      <a href="#" onclick="showSection('piotroski')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Skor Piotroski</a>
+      <a href="#" onclick="showSection('sektor')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Perbandingan Sektor</a>
+      <a href="#" onclick="showSection('profilRisiko')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Profil Risiko</a>
+      <a href="#" onclick="showSection('autoRejection')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Auto Rejection</a>
+      <a href="#" onclick="showSection('dca')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Dollar Cost Averaging</a>
     </div>
 
-<!-- Hitung Fundamental -->
 <div id="fundamental" class="hidden bg-white p-6 rounded-lg shadow">
   <h2 class="text-xl font-semibold mb-4">Hitung Fundamental</h2>
   <form id="fundamentalForm" class="space-y-4">
@@ -150,8 +127,7 @@ document.getElementById('fundamentalForm').addEventListener('submit', function(e
 });
 </script>
 
-        <!-- Dividen -->
-    <div id="dividen" class="hidden bg-white p-6 rounded-lg shadow">
+        <div id="dividen" class="hidden bg-white p-6 rounded-lg shadow">
       <h2 class="text-xl font-semibold mb-4">Analisis Dividen</h2>
       <form id="dividenForm" class="space-y-4">
         <div><label class="block">Dividen per Saham (DPS)</label><input type="number" id="dps" class="w-full border p-2 rounded" required></div>
@@ -164,7 +140,6 @@ document.getElementById('fundamentalForm').addEventListener('submit', function(e
       </div>
     </div>
 
-    <!-- Valuasi DCF -->
     <div id="valuasi" class="hidden bg-white p-6 rounded-lg shadow">
       <h2 class="text-xl font-semibold mb-4">Valuasi Saham (DCF Sederhana)</h2>
       <form id="valuasiForm" class="space-y-4">
@@ -179,7 +154,6 @@ document.getElementById('fundamentalForm').addEventListener('submit', function(e
       </div>
     </div>
 
-    <!-- Piotroski Score -->
     <div id="piotroski" class="hidden bg-white p-6 rounded-lg shadow">
       <h2 class="text-xl font-semibold mb-4">Skor Piotroski</h2>
       <form id="piotroskiForm" class="space-y-4">
@@ -201,7 +175,6 @@ document.getElementById('fundamentalForm').addEventListener('submit', function(e
       </div>
     </div>
 
-    <!-- Perbandingan Sektor -->
     <div id="sektor" class="hidden bg-white p-6 rounded-lg shadow">
       <h2 class="text-xl font-semibold mb-4">Perbandingan Sektor</h2>
       <p class="mb-2">Masukkan data rasio PER dari beberapa sektor:</p>
@@ -216,16 +189,183 @@ document.getElementById('fundamentalForm').addEventListener('submit', function(e
         <p>Sektor dengan PER terendah: <span id="sektorTerbaik"></span></p>
       </div>
     </div>
+
+    <div id="profilRisiko" class="hidden bg-white p-6 rounded-lg shadow">
+      <h2 class="text-xl font-semibold mb-4">Tes Profil Risiko Investasi</h2>
+      <form id="risikoForm" class="space-y-4">
+        <div>
+          <label class="block mb-1">1. Berapa jangka waktu investasi yang Anda inginkan?</label>
+          <select id="q1" class="w-full border p-2 rounded">
+            <option value="1">&lt; 1 tahun (Sangat konservatif)</option>
+            <option value="2">1 - 3 tahun (Konservatif)</option>
+            <option value="3">3 - 5 tahun (Moderat)</option>
+            <option value="4">&gt; 5 tahun (Agresif)</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">2. Seberapa besar toleransi Anda terhadap fluktuasi nilai investasi?</label>
+          <select id="q2" class="w-full border p-2 rounded">
+            <option value="1">Tidak suka melihat nilai turun</option>
+            <option value="2">Bisa menerima sedikit penurunan nilai</option>
+            <option value="3">Cukup nyaman dengan fluktuasi nilai</option>
+            <option value="4">Tidak masalah dengan perubahan nilai yang besar</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">3. Jika nilai investasi Anda turun 10%, apa yang akan Anda lakukan?</label>
+          <select id="q3" class="w-full border p-2 rounded">
+            <option value="1">Menjual semua investasi</option>
+            <option value="2">Menjual sebagian untuk mengamankan dana</option>
+            <option value="3">Tetap berinvestasi dan menunggu nilai pulih</option>
+            <option value="4">Menambah investasi saat harga turun</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">4. Jenis investasi apa yang paling menarik bagi Anda?</label>
+          <select id="q4" class="w-full border p-2 rounded">
+            <option value="1">Deposito / obligasi / reksa dana pasar uang</option>
+            <option value="2">Reksa dana pendapatan tetap / campuran</option>
+            <option value="3">Saham individu / reksa dana saham</option>
+            <option value="4">Kripto / properti</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">5. Seberapa banyak pengalaman Anda dalam berinvestasi?</label>
+          <select id="q5" class="w-full border p-2 rounded">
+            <option value="1">Baru mulai</option>
+            <option value="2">Sedikit pengalaman</option>
+            <option value="3">Berpengalaman</option>
+            <option value="4">Sangat berpengalaman</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">6. Apakah Anda memahami konsep diversifikasi investasi?</label>
+          <select id="q6" class="w-full border p-2 rounded">
+            <option value="1">Tidak pernah mendengar konsep ini</option>
+            <option value="2">Mengerti sedikit</option>
+            <option value="3">Mengerti dan telah menerapkan</option>
+            <option value="4">Sangat memahami dan menggunakan secara strategis</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">7. Bagaimana sikap Anda terhadap aset yang kurang likuid?</label>
+          <select id="q7" class="w-full border p-2 rounded">
+            <option value="1">Lebih suka aset likuid</option>
+            <option value="2">Cukup nyaman</option>
+            <option value="3">Tidak keberatan</option>
+            <option value="4">Lebih suka aset jangka panjang</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">8. Jika investasi Anda mengalami keuntungan besar, apa yang Anda lakukan?</label>
+          <select id="q8" class="w-full border p-2 rounded">
+            <option value="1">Langsung mencairkan</option>
+            <option value="2">Ambil sebagian keuntungan</option>
+            <option value="3">Tetap berinvestasi</option>
+            <option value="4">Menambah investasi</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">9. Seberapa besar persentase pendapatan untuk investasi berisiko tinggi?</label>
+          <select id="q9" class="w-full border p-2 rounded">
+            <option value="1">&lt; 10%</option>
+            <option value="2">10 - 30%</option>
+            <option value="3">30 - 50%</option>
+            <option value="4">&gt; 50%</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">10. Hasil stabil vs potensi tinggi?</label>
+          <select id="q10" class="w-full border p-2 rounded">
+            <option value="1">Stabil dan risiko rendah</option>
+            <option value="2">Lebih ke stabil</option>
+            <option value="3">Cenderung ke potensi tinggi</option>
+            <option value="4">Potensi tinggi meski berisiko</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">11. Seberapa sering Anda ingin memantau investasi?</label>
+          <select id="q11" class="w-full border p-2 rounded">
+            <option value="4">Setiap hari</option>
+            <option value="3">Setiap minggu</option>
+            <option value="2">Setiap bulan</option>
+            <option value="1">Jarang</option>
+          </select>
+        </div>
+        <div>
+          <label class="block mb-1">12. Sumber informasi utama investasi Anda?</label>
+          <select id="q12" class="w-full border p-2 rounded">
+            <option value="1">Tidak aktif mencari informasi</option>
+            <option value="2">Media sosial / forum</option>
+            <option value="3">Buku / artikel ekonomi</option>
+            <option value="4">Konsultan keuangan</option>
+          </select>
+        </div>
+        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Lihat Profil Risiko</button>
+      </form>
+      <div id="hasilRisiko" class="mt-6 hidden">
+        <h3 class="text-lg font-semibold mb-2">Hasil Profil Risiko Anda:</h3>
+        <p id="risikoResult"></p>
+      </div>
+    </div>
+
+    <div id="autoRejection" class="hidden bg-white p-6 rounded-lg shadow">
+      <h2 class="text-xl font-semibold mb-4">Hitung Auto Rejection</h2>
+      <form id="autoRejectionForm" class="space-y-4">
+        <div><label class="block">Harga Saham</label><input type="text" id="hargaSaham" class="w-full border p-2 rounded" required></div>
+        <div>
+          <label class="block">Persentase ARA (%)</label>
+          <input type="number" id="persentaseARA" class="w-full border p-2 rounded" value="" required>
+        </div>
+        <div>
+          <label class="block">Persentase ARB (%)</label>
+          <input type="number" id="persentaseARB" class="w-full border p-2 rounded" value="15" readonly required>
+        </div>
+        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Hitung</button>
+      </form>
+      <div class="mt-4 text-sm text-gray-700">
+        <p class="mb-2 font-semibold">Perhatian:</p>
+        <p class="mb-2">ARB (Auto Rejection Bawah): Diseragamkan menjadi 15% untuk semua saham, terlepas dari fraksi harga.</p>
+        <p class="mb-2">ARA (Auto Rejection Atas): Mengikuti batasan simetris sejak 2023:</p>
+        <ul class="list-disc pl-5">
+          <li>35% untuk saham dengan harga Rp50 – Rp200.</li>
+          <li>25% untuk saham dengan harga Rp200 – Rp5.000.</li>
+          <li>20% untuk saham dengan harga di atas Rp5.000.</li>
+        </ul>
+        <p class="mt-2 text-red-500">Khusus IPO: Pada hari pertama perdagangan saham baru, batas ARA/ARB bisa dua kali lipat untuk mengakomodasi volatilitas awal. (*Ini mengacu pada tahun 2025 jika aturan dari BEI aturan diatas tidak berlaku)</p>
+      </div>
+      <div id="resultAutoRejection" class="mt-6 hidden">
+        <h3 class="text-lg font-semibold mb-2">Hasil:</h3>
+        <p>Auto Rejection Atas: <span id="autoRejectionAtas"></span></p>
+        <p>Auto Rejection Bawah: <span id="autoRejectionBawah"></span></p>
+      </div>
+    </div>
+
+    <div id="dca" class="hidden bg-white p-6 rounded-lg shadow">
+      <h2 class="text-xl font-semibold mb-4">Hitung Dollar Cost Averaging</h2>
+      <form id="dcaForm" class="space-y-4">
+        <div><label class="block">Investasi Per Periode</label><input type="text" id="investasiPerPeriode" class="w-full border p-2 rounded" required></div>
+        <div><label class="block">Harga Saham Periode 1</label><input type="text" id="harga1" class="w-full border p-2 rounded" required></div>
+        <div><label class="block">Harga Saham Periode 2</label><input type="text" id="harga2" class="w-full border p-2 rounded" required></div>
+        <div><label class="block">Harga Saham Periode 3</label><input type="text" id="harga3" class="w-full border p-2 rounded" required></div>
+        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Hitung</button>
+      </form>
+      <div id="resultDCA" class="mt-6 hidden">
+        <h3 class="text-lg font-semibold mb-2">Hasil:</h3>
+        <p>Total Investasi: <span id="totalInvestasi"></span></p>
+        <p>Total Saham Dibeli: <span id="totalSahamDCA"></span></p>
+        <p>Rata-rata Harga Saham: <span id="rataHargaSaham"></span></p>
+      </div>
+    </div>
   </div>
 
-  <!-- Watermark -->
   <footer class="absolute bottom-2 right-4 text-gray-400 text-sm">
     &copy; 2025 Raihan Pratama Putera
   </footer>
 
   <script>
     function showSection(id) {
-      ['fundamental', 'dividen', 'valuasi', 'piotroski', 'sektor'].forEach(section => {
+      ['fundamental', 'dividen', 'valuasi', 'piotroski', 'sektor', 'profilRisiko', 'autoRejection', 'dca'].forEach(section => {
         document.getElementById(section).classList.add('hidden');
       });
       document.getElementById(id).classList.remove('hidden');
@@ -239,7 +379,7 @@ document.getElementById('fundamentalForm').addEventListener('submit', function(e
     function getRawValue(id) {
       const input = document.getElementById(id);
       return parseFloat((input.dataset.raw || input.value || '').replace(/\./g, '')) || 0;
-    }
+}
 
     document.querySelectorAll('input[type=number]').forEach(input => {
       input.type = 'text';
@@ -328,12 +468,61 @@ document.getElementById('fundamentalForm').addEventListener('submit', function(e
       document.getElementById('sektorTerbaik').textContent = terbaik;
       document.getElementById('resultSektor').classList.remove('hidden');
     });
-  </script>
-  
-  </div>
 
-  <footer class="text-center text-gray-500 text-sm mt-12">
-    &copy; 2025 Raihan Pratama Putera
-  </footer>
+        // Profil Risiko
+    document.getElementById('risikoForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      let total = 0;
+      for (let i = 1; i <= 12; i++) {
+        total += parseInt(document.getElementById('q' + i).value);
+      }
+
+      let hasil = '';
+      if (total <= 18) hasil = 'Konservatif: Anda lebih memilih keamanan dan stabilitas.';
+      else if (total <= 30) hasil = 'Moderat: Anda siap mengambil risiko dengan perhitungan.';
+      else if (total <= 42) hasil = 'Agresif: Anda nyaman dengan risiko tinggi demi potensi keuntungan besar.';
+      else hasil = 'Sangat Agresif: Anda mencari peluang keuntungan maksimal dan sangat nyaman menghadapi risiko tinggi.';
+
+      document.getElementById('risikoResult').textContent = hasil;
+      document.getElementById('hasilRisiko').classList.remove('hidden');
+    });
+
+    // Auto Rejection
+    document.getElementById('autoRejectionForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const hargaSaham = getRawValue('hargaSaham');
+      const persentaseARA = parseFloat(document.getElementById('persentaseARA').value) / 100;
+      const persentaseARB = parseFloat(document.getElementById('persentaseARB').value) / 100;
+
+      const atas = hargaSaham + (hargaSaham * persentaseARA);
+      const bawah = hargaSaham - (hargaSaham * persentaseARB);
+
+      document.getElementById('autoRejectionAtas').textContent = atas.toLocaleString();
+      document.getElementById('autoRejectionBawah').textContent = bawah.toLocaleString();
+      document.getElementById('resultAutoRejection').classList.remove('hidden');
+    });
+
+    // Dollar Cost Averaging
+    document.getElementById('dcaForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const investasi = getRawValue('investasiPerPeriode');
+      const harga1 = getRawValue('harga1');
+      const harga2 = getRawValue('harga2');
+      const harga3 = getRawValue('harga3');
+
+      const saham1 = investasi / harga1;
+      const saham2 = investasi / harga2;
+      const saham3 = investasi / harga3;
+
+      const totalInvestasi = investasi * 3;
+      const totalSaham = saham1 + saham2 + saham3;
+      const rataHarga = totalInvestasi / totalSaham;
+
+      document.getElementById('totalInvestasi').textContent = totalInvestasi.toLocaleString();
+      document.getElementById('totalSahamDCA').textContent = totalSaham.toFixed(2);
+      document.getElementById('rataHargaSaham').textContent = rataHarga.toLocaleString();
+      document.getElementById('resultDCA').classList.remove('hidden');
+    });
+  </script>
 </body>
 </html>
