--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Investasi</title>
+  <title>Kalkulator Investasi GISBEI UPI</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 p-6 relative min-h-screen">
   <div class="max-w-3xl mx-auto pb-16">
-    <h1 class="text-3xl font-bold mb-6 text-center">Dashboard Investasi</h1>
+    <h1 class="text-3xl font-bold mb-6 text-center">Dashboard Kalkulator Investasi GISBEI UPI</h1>
 
 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
       <a href="#" onclick="showSection('fundamental')" class="block bg-white p-6 rounded-lg shadow hover:bg-blue-50 transition">Hitung Fundamental</a>
